<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_game_settings" >
         <PreferenceScreen
            xmlns:replica="http://schemas.android.com/apk/res/com.shikhar.androidgames.mario.core"
            android:key="audioConfigScreen"
            android:title="@string/preference_audio_controls" >
           <CheckBoxPreference
            	android:defaultValue="true"
            	android:key="enableSound"
            	android:persistent="true"
            	android:summaryOff="@string/preference_enable_sound_summary"
            	android:summaryOn="@string/preference_enable_sound_summary"
           		android:title="@string/preference_enable_sound" />
            <com.shikhar.androidgames.mario.preferences.SliderPreference
                android:defaultValue="50"
                android:key="soundVolume"
                android:persistent="true"
                android:summary="@string/preference_sound_volume_summary"
                android:title="@string/preference_sound_volume"
                replica:maxText="@string/preference_sound_max"
                replica:minText="@string/preference_sound_min" />
            <CheckBoxPreference
            	android:defaultValue="true"
            	android:key="enableMusic"
            	android:persistent="true"
           	 	android:summaryOff="@string/preference_enable_music_summary"
            	android:summaryOn="@string/preference_enable_music_summary"
            	android:title="@string/preference_enable_music" />
            <com.shikhar.androidgames.mario.preferences.SliderPreference
                android:defaultValue="50"
                android:key="musicVolume"
                android:persistent="true"
                android:summary="@string/preference_music_volume_summary"
                android:title="@string/preference_music_volume"
                replica:maxText="@string/preference_music_max"
                replica:minText="@string/preference_music_min" />
        </PreferenceScreen>
      
         <PreferenceScreen
            xmlns:replica="http://schemas.android.com/apk/res/com.shikhar.androidgames.mario.core"
            android:key="controlConfigScreen"
            android:title="@string/preference_configure_controls" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enableClickAttack"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_click_attack_summary"
                android:summaryOn="@string/preference_enable_click_attack_summary"
                android:title="@string/preference_enable_click_attack" />

            <com.shikhar.androidgames.mario.preferences.KeyboardConfigDialogPreference
                android:dialogLayout="@layout/key_config"
                android:dialogTitle="@string/preference_key_config_dialog_title"
                android:key="keyconfig"
                android:negativeButtonText="@string/preference_key_config_dialog_cancel"
                android:positiveButtonText="@string/preference_key_config_dialog_ok"
                android:summary="@string/preference_key_config_summary"
                android:title="@string/preference_key_config"
                replica:attackKey="keyAttack"
                replica:jumpKey="keyJump"
                replica:leftKey="keyLeft"
                replica:rightKey="keyRight" />

            <com.shikhar.androidgames.mario.preferences.SliderPreference
                android:defaultValue="100"
                android:key="movementSensitivity"
                android:persistent="true"
                android:summary="@string/preference_movement_sensitivity_summary"
                android:title="@string/preference_movement_sensitivity"
                replica:maxText="@string/preference_movement_max"
                replica:minText="@string/preference_movement_min" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="enableScreenControls"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_screen_controls_summary"
                android:summaryOn="@string/preference_enable_screen_controls_summary"
                android:title="@string/preference_enable_screen_controls" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="enableScreenControls"
                android:key="enableTiltControls"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_tilt_controls_summary"
                android:summaryOn="@string/preference_enable_tilt_controls_summary"
                android:title="@string/preference_enable_tilt_controls" />

            <com.shikhar.androidgames.mario.preferences.SliderPreference
                android:defaultValue="50"
                android:dependency="enableTiltControls"
                android:key="tiltSensitivity"
                android:persistent="true"
                android:summary="@string/preference_tilt_sensitivity_summary"
                android:title="@string/preference_tilt_sensitivity"
                replica:maxText="@string/preference_tilt_max"
                replica:minText="@string/preference_tilt_min" />
        </PreferenceScreen>

     </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_save_game" >
        <com.shikhar.androidgames.mario.preferences.YesNoDialogPreference
            android:dialogMessage="@string/preference_erase_save_game_dialog"
            android:dialogTitle="@string/preference_erase_save_game_dialog_title"
            android:key="erasegame"
            android:negativeButtonText="@string/preference_erase_save_game_dialog_cancel"
            android:positiveButtonText="@string/preference_erase_save_game_dialog_ok"
            android:title="@string/preference_erase_save_game" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableStats"
            android:persistent="true"
            android:summaryOff="@string/preference_enable_statistics_summary"
            android:summaryOn="@string/preference_enable_statistics_summary"
            android:title="@string/preference_enable_statistics" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_about" >
        <PreferenceScreen android:title="@string/preference_visit_site" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.shikharclasses.com" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/preference_misc" 
            xmlns:replica="http://schemas.android.com/apk/res/com.shikhar.androidgames.mario.preferences"
            android:key="aboutScreen">
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_about_summary"
                android:title="@string/preference_about_title" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_thanks_summary"
                android:title="@string/preference_thanks_title" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_licence_summary"
                android:title="@string/preference_licence_title" />
             <CheckBoxPreference
                android:defaultValue="false"
                android:key="enableDebug"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_debug_summary"
                android:summaryOn="@string/preference_enable_debug_summary"
                android:title="@string/preference_enable_debug" />

            
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>